added the typewriter,social handles

--- a/public/index.html
+++ b/public/index.html
@@ -42,14 +42,14 @@
   </body>
 </html>
 <script>
-  setTimeout(function () {
-    const myItem1 = document.querySelector(".react-activity-calendar__count");
-    const myItem2 = document.querySelector(
-      ".react-activity-calendar__legend-colors styles_legendColors__1wUi_"
-    );
+  // setTimeout(function () {
+  //   const myItem1 = document.querySelector(".react-activity-calendar__count");
+  //   const myItem2 = document.querySelector(
+  //     ".react-activity-calendar__legend-colors styles_legendColors__1wUi_"
+  //   );
 
-    // console.log(myItem);
-    myItem1.classList.add("dark");
-    myItem2.classList.add("dark");
-  }, 3000);
+  //   // console.log(myItem);
+  //   myItem1.classList.add("dark");
+  //   myItem2.classList.add("dark");
+  // }, 3000);
 </script>
